# pybci

./: .coverage  .coveragerc  .gitignore  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  appveyor.yml  build_package.py  generate_yaml.py  pyproject.toml  requirements-devel.txt  requirements.txt  setup.py  t.py
.github/workflows/: ci.yml  publish-to-pypi.yml  python-publish.yml
Examples/: README.md  test.py  testEpochTimingsConfig.py  testSimple.py
Examples/PsuedoLSLStreamGenerator/: README.md
Examples/RightLeftMarkerExample/: RightLeftMarkers.py
JOSS/: paper.bib  paper.md
LSLTest/: mainSend.py  testSimple.py
PsuedoLSLStreamGenerator/: mainSend.py
Tests/: TestSklearn.py  pytest.ini  test_PseudoDevice.py  test_Pytorch.py  test_Simple.py  test_SimpleOtherFeatures.py  test_Sklearn.py  test_Tensorflow.py  test_cli.py  test_simple.py  test_sklearn.py  test_zDualStream.py  test_zPseudoDevice.py  test_zSimpleOtherFeatures.py
docs/: conf.py  index.rst  requirements.txt  usage.rst
docs/BackgroundInformation/: Classification.rst  Contributing.rst  Epoch_Timing.rst  Examples.rst  Feature_Selection.rst  Getting_Started.rst  Introduction.rst  Pseudo_Device.rst  Theory_Operation.rst  What_is_PyBCI.rst  user_guide.rst
docs/api/: Configurations.rst  LSLScanner.rst  PseudoDevice.rst  PseudoDeviceController.rst  PsuedoDevice.rst  PyBCI.rst
docs/source/: api.rst  conf.py  index.rst
install_pybci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pyLSL-BCI/: setup.py
pyLSL-BCI/Examples/: test.py
pyLSL-BCI/pyLSL-BCI/: __init__.py  pylslbci.py
pybci/: LSLScanner.py  __init__.py  cli.py  pybci.py  simpleExample.py  test.py  testSklearn.py  testTensorflow.py  version.py
pybci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pybci/CliTests/: testPyTorch.py  testSimple.py  testSklearn.py  (+1 more)
workflows/: publish-to-pypi.yml
(+68 files in other folders)
