[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybci-package"
dynamic = ["version"]
description = "A Python interface to create a BCI with the Lab Streaming Layer, Pytorch, SciKit-Learn and Tensorflow packages"
readme = "README.md"
authors = [
    {name = "Liam Booth", email = "liambooth123@hotmail.co.uk"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["machine-learning", "tensorflow", "sklearn", "pytorch", "human-computer-interaction", "bci", "lsl", "brain-computer-interface", "labstreaminglayer"]
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.21",
    "pylsl==1.16.1",
    "scipy>=1.11.1",
    "antropy>=0.1.6",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/lmbooth/pybci"

[project.scripts]
pybci = "pybci.cli:main"

[tool.setuptools]
packages = ["pybci"]

[tool.setuptools.dynamic]
version = {attr = "pybci.version.__version__"}

